--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-command = "npx vite build"
+command = "npm install && npx vite build"
 publish = "dist"
 functions = "netlify/functions"
 
@@ -17,13 +17,13 @@ status = 200
 
 [context]
 [context.staging]
-command = "npm run build:staging"
+command = "npm install && npm run build:staging"
 
 [context.staging.environment]
 NODE_ENV = "staging"
 
 [context.production]
-command = "npm run build:production"
+command = "npm install && npm run build:production"
 
 [context.production.environment]
 NODE_ENV = "production"
