--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,11 @@
 [build]
-command = "npx vite build"
+command = "npm install && npx vite build"
 publish = "dist"
 functions = "netlify/functions"
 
 [build.environment]
 NODE_VERSION = "18"
+NPM_FLAGS = "--legacy-peer-deps"
 
 [functions]
 node_bundler = "esbuild"
@@ -17,13 +18,13 @@ status = 200
 
 [context]
 [context.staging]
-command = "npm ci && npm run build:staging"
+command = "npm install && npx vite build --mode staging"
 
 [context.staging.environment]
 NODE_ENV = "staging"
 
 [context.production]
-command = "npm ci && npm run build:production"
+command = "npm install && npx vite build --mode production"
 
 [context.production.environment]
 NODE_ENV = "production"
